# Modulable-C-Main

./: MainC++.hpp  README.md
example/: CMakeLists.txt
example/mains/: main3.cpp  main7.cpp  main8.cpp
exemple/: CMakeLists.txt
exemple/include/: Args.hpp
exemple/mains/: main1.cpp  main2.cpp  main4.cpp  main6.cpp
