cmake_minimum_required(VERSION 3.11)
project(CXXMain)

include_directories(../ ./include)

set(CMAKE_CXX_STANDARD 17)

add_executable(CXXMain1 mains/main1.cpp)
add_executable(CXXMain2 mains/main2.cpp)
add_executable(CXXMain3 mains/main3.cpp)
add_executable(CXXMain4 mains/main4.cpp)
add_executable(CXXMain5 mains/main5.cpp)
add_executable(CXXMain6 mains/main6.cpp)
add_executable(CXXMain7 mains/main7.cpp)